@@ -59,7 +59,7 @@ NODE_RESERVED_NAMES_CONST <- c( 'AddChild',
 #'   \item{\code{Node$new(name)}}{Creates a new \code{Node} called \code{name}. Often used to construct the root when creating trees programmatically.}
 #'   \item{\code{AddChild(name)}}{Creates a new \code{Node} called \code{name} and adds it to this \code{Node} as a child.}
 #'   \item{\code{RemoveChild(name)}}{Remove the child \code{Node} called \code{name} from a \code{Node} and returns it.}
-#'   \item{\code{RemoveAttribute(name)}}{Removes attribute called \code{name} from this \code{Node}.}
+#'   \item{\code{RemoveAttribute(name, mandatory)}}{Removes attribute called \code{name} from this \code{Node}. Gives an error if \code{mandatory==TRUE} and the attribute doesn't exist.}
 #'   \item{\code{\link{Climb}(...)}}{Find a node with path \code{...}, where the \code{...} arguments are the \code{name}s of the \code{Node}s, or other field values.}
 #'   \item{\code{\link{Get}(attribute, ..., traversal = c("pre-order", "post-order", "in-order", "level", "ancestor"), pruneFun = NULL, filterFun = NULL, format = NULL, inheritFromAncestors = FALSE)}}{Traverses the tree and collects values along the way.}
 #'   \item{\code{\link{Do}(fun, ..., traversal = c("pre-order", "post-order", "in-order", "level", "ancestor"), pruneFun = NULL, filterFun = NUL)}}{Traverses the tree and call fun on each node.}
@@ -144,8 +144,8 @@ Node <- R6Class("Node",
                         return (child)
                       },
                       
-                      RemoveAttribute = function(name) {
-                        if (!name %in% ls(self)) stop(paste0("Node ", self$name, " does not contain field ", name))
+                      RemoveAttribute = function(name, mandatory = TRUE) {
+                        if (mandatory && !name %in% ls(self)) stop(paste0("Node ", self$name, " does not contain field ", name))
                         rm(list = name, envir = self)
                       },
                       
